--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
-body {
-    background-color: #1f2937;
+* {
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    
+
+}
+
+button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 12px;
 }
 
 /* header section */
 header {
     height: 60px;
+    background-color: #1f2937;
 }
 
 .header {
@@ -17,14 +32,11 @@ header {
 
 ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 .left-header {
     flex: 1;
     font-size: 24px;
-    font-weight: bold;
     color: #f9faf8;
 }
 
@@ -41,4 +53,47 @@ ul {
 }
 
 /* Hero section */
+.hero-container {
+    background-color: #1f2937;
+}
+.hero {
+    display: flex;
+    max-width: 70%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
+}
+
+img {
+   max-width: 100%;
+}
+
+h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: bold;
+
+}
+
+.hero-left {
+    flex: 1 1 0;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hero-right {
+    flex: 1 1 0;
+}
+
+.hero-left button {
+
+    align-self: flex-start;
+}
+
+.hero-left p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
