--- a/style.css
+++ b/style.css
@@ -97,3 +97,50 @@ h1 {
     font-size: 18px;
     color: #e5e7eb;
 }
+
+/* content section */
+
+.content {
+    max-width: 800px;
+    margin: auto;
+}
+
+.content h2 {
+    padding: 50px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+}
+
+.content-boxes {
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    gap: 30px;
+}
+
+.illustration {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.illust-img {
+    width: 100px;
+    height: 100px;
+    border: 4px solid #3882f6;
+    padding: 30px;
+    border-radius: 12px;
+    margin-bottom: 10px;
+}
+
+.illustration p {
+    text-align: center;
+    color: #1f2937;
+    font-size: 18px;
+}
