--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h1 {
 }
 
 .illustration {
-    flex: 1;
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -143,4 +143,33 @@ h1 {
     text-align: center;
     color: #1f2937;
     font-size: 18px;
+}
+
+/* quote section */
+
+.bottom-bar {
+    background-color: #e5e7eb;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+
+}
+
+.inspiring {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.cite {
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 30px;
 }
