--- a/style.css
+++ b/style.css
@@ -173,3 +173,33 @@ h1 {
     font-weight: bold;
     font-size: 30px;
 }
+
+/* call to action section */
+
+.call-to-action {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta-box {
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    height: 100px;
+    border-radius: 12px;
+    padding: 25px;
+    color: #f9faf8;
+}
+
+.cta-box-content {
+
+
+}
+
+.call-to-action button {
+    border: 2px solid #f9faf8;
+}
