--- a/style.css
+++ b/style.css
@@ -195,11 +195,18 @@ h1 {
     color: #f9faf8;
 }
 
-.cta-box-content {
-
-
-}
-
 .call-to-action button {
     border: 2px solid #f9faf8;
+}
+
+/* footer section */
+
+footer {
+    height: 100px;
+    background-color: #1f2937; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f9faf8;
+    font-size: 18px;
 }
