--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -15,6 +16,7 @@ button {
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 12px;
+    border: none;
 }
 
 /* header section */
@@ -118,7 +120,7 @@ h1 {
 
     align-items: center;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     gap: 30px;
 }
 
@@ -170,7 +172,7 @@ h1 {
 
 .cite {
     align-self: flex-end;
-    font-weight: bold;
+
     font-size: 30px;
 }
 
